# sql-seed

./: README.md  pyproject.toml
src/sql_seed/: __init__.py  cli.py  generator.py
tests/: test_cli.py  test_generator.py
tests/fixtures/: sample.csv
